10/24/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, just check to see if absolute_path is NULL.

10/13/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, no longer call tgdb_types_free_command.
   TGDB does the work automatically now.

10/13/2003 Bob Rossi <bob@brasko.net>

   * highlight.c: Changed every occurence from 'string_*' to 'ibuf_*'
   * tokenizer.c: ditto

10/12/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: Adding global #define of MAXLINE ( used to be in TGDB )

10/05/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, remove case TGDB_QUIT_NORMAL and
   TGDB_QUIT_ABNORMAL to add TGDB_QUIT.

10/01/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, add call to tgdb_types_free_command.

09/30/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, remove call to depricated tgdb_delete_command

09/27/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: remove #include 'ibuf.h'
   process_commands, TGDB_ABSOLUTE_SOURCE_ACCEPTED,
   TGDB_ABSOLUTE_SOURCED_DENIED, change to use tgdb_source_file.

09/27/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, TGDB_UDPATE_FILE_POSITION, remove use of
   'struct string', TGDB now returns 'char*'

09/27/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, TGDB_UPDATE_BREAKPOINTS case

09/26/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, changed case TGDB_ABSOLUTE_SOURCE_ACCEPTED and
   TGDB_ABSOLUTE_SOURCE_DENIED

09/25/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: removed #include 'queue.h'
   process_commands, implement TGDB_UPDATE_SOURCE_FILES case.

09/25/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, implement TGDB_UPDATE_FILE_POSITION case.

09/25/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: Add new #include of "tgdb_list.h"
   process_commands, implement TGDB_UPDATE_BREAKPOINTS case.

09/23/2003 Bob Rossi <bob@brasko.net>

   * sources.c: source_vscroll, source_set_sel_line, sets sel_rline 